[gd_scene load_steps=18 format=2]

[ext_resource path="res://res/textures/sprites/inventory/inventory.png" type="Texture" id=1]
[ext_resource path="res://res/textures/sprites/inventory/item_slot.png" type="Texture" id=2]
[ext_resource path="res://scenes/prefabs/Inventory/Inventory.gd" type="Script" id=3]
[ext_resource path="res://res/fonts/VCR OSD Mono.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://greyscale.gdshader" type="Shader" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )
shader_param/enable = true

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )
shader_param/enable = true

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 5 )
shader_param/enable = true

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 5 )
shader_param/enable = true

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 5 )
shader_param/enable = true

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 5 )
shader_param/enable = true

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 5 )
shader_param/enable = true

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 5 )
shader_param/enable = true

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 5 )
shader_param/enable = true

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 5 )
shader_param/enable = true

[node name="Inventory" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="LabelItemName" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -348.439
margin_top = -114.0
margin_right = 348.439
margin_bottom = -99.0
theme = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -98.0
ratio = 7.111
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer"]
margin_left = 291.561
margin_right = 988.439
margin_bottom = 98.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer"]
margin_left = 291.561
margin_right = 988.439
margin_bottom = 98.0
custom_constants/margin_top = 27
custom_constants/margin_bottom = 22

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer"]
margin_top = 27.0
margin_right = 696.0
margin_bottom = 76.0
custom_constants/separation = 96
alignment = 1

[node name="HBoxContainerLeft" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/HBoxContainer"]
margin_left = 63.0
margin_right = 300.0
margin_bottom = 49.0
custom_constants/separation = 48
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer0" type="AspectRatioContainer" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerLeft"]
margin_right = 9.0
margin_bottom = 49.0
stretch_mode = 1

[node name="ItemSlot" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerLeft/ItemContainer0"]
margin_left = -20.0
margin_right = 29.0
margin_bottom = 49.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="ItemIcon" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerLeft/ItemContainer0/ItemSlot"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer1" type="AspectRatioContainer" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerLeft"]
margin_left = 57.0
margin_right = 66.0
margin_bottom = 49.0
stretch_mode = 1

[node name="ItemSlot" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerLeft/ItemContainer1"]
margin_left = -20.0
margin_right = 29.0
margin_bottom = 49.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="ItemIcon" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerLeft/ItemContainer1/ItemSlot"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer2" type="AspectRatioContainer" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerLeft"]
margin_left = 114.0
margin_right = 123.0
margin_bottom = 49.0
stretch_mode = 1

[node name="ItemSlot" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerLeft/ItemContainer2"]
margin_left = -20.0
margin_right = 29.0
margin_bottom = 49.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="ItemIcon" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerLeft/ItemContainer2/ItemSlot"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer3" type="AspectRatioContainer" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerLeft"]
margin_left = 171.0
margin_right = 180.0
margin_bottom = 49.0
stretch_mode = 1

[node name="ItemSlot" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerLeft/ItemContainer3"]
margin_left = -20.0
margin_right = 29.0
margin_bottom = 49.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="ItemIcon" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerLeft/ItemContainer3/ItemSlot"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer4" type="AspectRatioContainer" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerLeft"]
margin_left = 228.0
margin_right = 237.0
margin_bottom = 49.0
stretch_mode = 1

[node name="ItemSlot" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerLeft/ItemContainer4"]
margin_left = -20.0
margin_right = 29.0
margin_bottom = 49.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="ItemIcon" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerLeft/ItemContainer4/ItemSlot"]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainerRight" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/HBoxContainer"]
margin_left = 396.0
margin_right = 633.0
margin_bottom = 49.0
custom_constants/separation = 48
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer5" type="AspectRatioContainer" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerRight"]
margin_right = 9.0
margin_bottom = 49.0
stretch_mode = 1

[node name="ItemSlot" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerRight/ItemContainer5"]
margin_left = -20.0
margin_right = 29.0
margin_bottom = 49.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="ItemIcon" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerRight/ItemContainer5/ItemSlot"]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer6" type="AspectRatioContainer" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerRight"]
margin_left = 57.0
margin_right = 66.0
margin_bottom = 49.0
stretch_mode = 1

[node name="ItemSlot" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerRight/ItemContainer6"]
margin_left = -20.0
margin_right = 29.0
margin_bottom = 49.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="ItemIcon" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerRight/ItemContainer6/ItemSlot"]
material = SubResource( 9 )
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer7" type="AspectRatioContainer" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerRight"]
margin_left = 114.0
margin_right = 123.0
margin_bottom = 49.0
stretch_mode = 1

[node name="ItemSlot" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerRight/ItemContainer7"]
margin_left = -20.0
margin_right = 29.0
margin_bottom = 49.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="ItemIcon" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerRight/ItemContainer7/ItemSlot"]
material = SubResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer8" type="AspectRatioContainer" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerRight"]
margin_left = 171.0
margin_right = 180.0
margin_bottom = 49.0
stretch_mode = 1

[node name="ItemSlot" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerRight/ItemContainer8"]
margin_left = -20.0
margin_right = 29.0
margin_bottom = 49.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="ItemIcon" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerRight/ItemContainer8/ItemSlot"]
material = SubResource( 11 )
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer9" type="AspectRatioContainer" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerRight"]
margin_left = 228.0
margin_right = 237.0
margin_bottom = 49.0
stretch_mode = 1

[node name="ItemSlot" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerRight/ItemContainer9"]
margin_left = -20.0
margin_right = 29.0
margin_bottom = 49.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="ItemIcon" type="TextureRect" parent="AspectRatioContainer/MarginContainer/HBoxContainer/HBoxContainerRight/ItemContainer9/ItemSlot"]
material = SubResource( 12 )
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 512.5, 435.5 )
scale = Vector2( 7.99219, 17.3889 )
texture = ExtResource( 1 )
